<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/id"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/login_edittext_border"
        android:paddingStart="15dp"
        android:textSize="13sp"
        android:hint="@string/type_id"
        android:fontFamily="@font/scd5_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_login" />

    <EditText
        android:id="@+id/password"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_edittext_border"
        android:paddingStart="15dp"
        android:textSize="13sp"
        android:hint="@string/type_pw"
        android:fontFamily="@font/scd5_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/main_color_button"
        android:fontFamily="@font/scd8_heavy"
        android:textColor="@color/white"
        android:text="@string/login"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_button"
        android:fontFamily="@font/scd8_heavy"
        android:textColor="@color/main_color"
        android:text="@string/join_mbs"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>