<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            android:onClick="@{activity::backBtnClick}"
            android:layout_width="18dp"
            android:layout_height="16dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/join_mbs"
            android:textColor="@color/base"
            android:textSize="16sp"
            android:fontFamily="@font/scd5_medium"/>


    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/thin"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:text="@string/name"
        android:textColor="@color/base"
        android:textSize="12sp"
        android:fontFamily="@font/scd7_extra_bold"
        app:layout_constraintTop_toBottomOf="@+id/thin"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="260dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="36dp"
        android:paddingStart="15dp"
        android:background="@drawable/signup_edittext_border"
        android:hint="@string/type_name"
        android:textColor="@color/text"
        android:textSize="10sp"
        android:fontFamily="@font/scd5_medium"
        app:layout_constraintTop_toBottomOf="@+id/thin"
        app:layout_constraintStart_toEndOf="@+id/name"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="25dp"
        android:text="@string/phone"
        android:textColor="@color/base"
        android:textSize="12sp"
        android:fontFamily="@font/scd7_extra_bold"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/spinner_phone"
        android:layout_width="57dp"
        android:layout_height="36dp"
        android:layout_marginTop="19dp"
        android:layout_marginStart="13dp"
        android:spinnerMode="dropdown"
        android:dropDownWidth="170dp"
        android:paddingStart="11dp"
        android:background="@drawable/bg_spinner_phone"
        app:layout_constraintTop_toBottomOf="@+id/edit_name"
        app:layout_constraintStart_toEndOf="@+id/phone"/>




</androidx.constraintlayout.widget.ConstraintLayout>