<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".FragmentUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/white_bar"
        android:elevation="15dp"
        android:layout_marginTop="-5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="55dp"
            android:background="@color/white"
            android:fontFamily="@font/scd7_extra_bold"
            android:text="최수진"
            android:textColor="@color/main_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="55dp"
            android:background="@color/white"
            android:fontFamily="@font/scd5_medium"
            android:text="@string/welcome"
            android:textColor="@color/base"
            android:textSize="14sp"
            android:textStyle="normal" />

    </LinearLayout>

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:layout_marginTop="170dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        android:background="@drawable/base_bottom_view"
        android:src="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="275dp"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_account"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginTop="55dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:background="@drawable/small_white_button"
            android:elevation="5dp"
            android:fontFamily="@font/scd4_regular"
            android:paddingStart="20dp"
            android:text="@string/account"
            android:textColor="@color/base"
            android:textSize="12sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:background="@drawable/small_white_button"
            android:elevation="5dp"
            android:fontFamily="@font/scd4_regular"
            android:paddingStart="20dp"
            android:text="@string/logout"
            android:textColor="@color/base"
            android:textSize="12sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btn_dropout"
            android:layout_width="340dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center|left"
            android:background="@drawable/small_white2_button"
            android:elevation="5dp"
            android:fontFamily="@font/scd4_regular"
            android:paddingStart="20dp"
            android:text="@string/account"
            android:textColor="@color/main_color2"
            android:textSize="12sp"
            android:textStyle="normal" />

    </LinearLayout>

</FrameLayout>



    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:gravity="center"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:textSize="30sp"-->
    <!--        android:text="@string/hello_blank_fragment_3" />-->
