<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.lieferung.viewmodel.ReserveViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/white_bar2"
            android:elevation="15dp"
            android:layout_marginTop="-5dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/ic_full_arrow"/>

            <Spinner
                android:id="@+id/spinner_start_point"
                android:layout_width="310dp"
                android:layout_height="35dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="-55dp"
                android:spinnerMode="dropdown"
                android:paddingStart="10dp"
                android:background="@drawable/bg_spinner_station" />

            <Spinner
                android:id="@+id/spinner_arrival_point"
                android:layout_width="310dp"
                android:layout_height="35dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="10dp"
                android:spinnerMode="dropdown"
                android:paddingStart="10dp"
                android:background="@drawable/bg_spinner_station" />

        </LinearLayout>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/map"/>

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginTop="155dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/main_color_button"
            android:fontFamily="@font/scd4_regular"
            android:gravity="center"
            android:onClick="@{()->viewModel.onClickConnect()}"
            android:text="@{viewModel.btnConnected?@string/disconnect:@string/connect}"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:background="@color/base"
            android:orientation="horizontal"
            android:visibility="@{viewModel.inProgressView?View.VISIBLE:View.GONE}">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:indeterminateTint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@{viewModel.txtProgress}"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="450dp"
            android:layout_marginBottom="-15dp"
            android:background="@drawable/white_bottom_bar"
            android:elevation="50dp"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="45dp"
                android:background="@color/white"
                android:fontFamily="@font/scd4_regular"
                android:text="@string/estimate_time"
                android:textColor="@color/base"
                android:textSize="17sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/estimate_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="45dp"
                android:background="@color/white"
                android:fontFamily="@font/scd7_extra_bold"
                android:text="12:00(예)"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="80dp"
                android:background="@color/white"
                android:fontFamily="@font/scd4_regular"
                android:text="@string/receive_time"
                android:textColor="@color/base"
                android:textSize="17sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/receive_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="280dp"
                android:layout_marginTop="80dp"
                android:background="@color/white"
                android:fontFamily="@font/scd7_extra_bold"
                android:text="12:50(예)"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btn_reservation"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="80dp"
                android:background="@drawable/white_button"
                android:fontFamily="@font/scd7_extra_bold"
                android:gravity="center"
                android:text="@string/reserve"
                android:textColor="@color/main_color"
                android:textSize="15sp"
                android:textStyle="normal" />

        </RelativeLayout>

    </FrameLayout>

</layout>
<!--    android:onClick="@{()->viewModel.onClickSendData()}"-->

<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".ui.FragmentReservation"-->
<!--    android:background="@color/back">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="150dp"-->
<!--        android:background="@drawable/white_bar2"-->
<!--        android:elevation="15dp"-->
<!--        android:layout_marginTop="-5dp"-->
<!--        android:orientation="vertical">-->

<!--        <ImageView-->
<!--            android:layout_width="30dp"-->
<!--            android:layout_height="30dp"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="70dp"-->
<!--            android:src="@drawable/ic_full_arrow"/>-->

<!--        <Spinner-->
<!--            android:id="@+id/spinner_start_point"-->
<!--            android:layout_width="310dp"-->
<!--            android:layout_height="35dp"-->
<!--            android:layout_marginStart="60dp"-->
<!--            android:layout_marginTop="-60dp"-->
<!--            android:spinnerMode="dropdown"-->
<!--            android:paddingStart="10dp"-->
<!--            android:background="@drawable/bg_spinner_station"/>-->

<!--        <Spinner-->
<!--            android:id="@+id/spinner_arrival_point"-->
<!--            android:layout_width="310dp"-->
<!--            android:layout_height="35dp"-->
<!--            android:layout_marginStart="60dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:spinnerMode="dropdown"-->
<!--            android:paddingStart="10dp"-->
<!--            android:background="@drawable/bg_spinner_station"/>-->

<!--    </LinearLayout>-->

<!--&lt;!&ndash;    <com.github.chrisbanes.photoview.PhotoView&ndash;&gt;-->
<!--&lt;!&ndash;        android:id="@+id/map"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_width="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:layout_height="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;        android:src="@drawable/" />&ndash;&gt;-->

<!--    <ProgressBar-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_width="40dp"-->
<!--        android:layout_height="40dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:indeterminateTint="@color/white"/>-->

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="250dp"-->
<!--        android:layout_marginTop="450dp"-->
<!--        android:layout_marginBottom="-15dp"-->
<!--        android:background="@drawable/white_bottom_bar"-->
<!--        android:elevation="50dp"-->
<!--        android:layout_gravity="bottom"-->
<!--        android:orientation="vertical">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="45dp"-->
<!--            android:background="@color/white"-->
<!--            android:fontFamily="@font/scd4_regular"-->
<!--            android:text="@string/estimate_time"-->
<!--            android:textColor="@color/base"-->
<!--            android:textSize="17sp"-->
<!--            android:textStyle="normal" />-->

<!--        <TextView-->
<!--            android:id="@+id/estimate_time"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="310dp"-->
<!--            android:layout_marginTop="45dp"-->
<!--            android:background="@color/white"-->
<!--            android:fontFamily="@font/scd7_extra_bold"-->
<!--            android:text="12:00"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="normal" />-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="80dp"-->
<!--            android:background="@color/white"-->
<!--            android:fontFamily="@font/scd4_regular"-->
<!--            android:text="@string/receive_time"-->
<!--            android:textColor="@color/base"-->
<!--            android:textSize="17sp"-->
<!--            android:textStyle="normal" />-->

<!--        <TextView-->
<!--            android:id="@+id/receive_time"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="310dp"-->
<!--            android:layout_marginTop="80dp"-->
<!--            android:background="@color/white"-->
<!--            android:fontFamily="@font/scd7_extra_bold"-->
<!--            android:text="12:50"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp"-->
<!--            android:textStyle="normal" />-->

<!--        <Button-->
<!--            android:id="@+id/btn_reservation"-->
<!--            android:layout_width="100dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginBottom="80dp"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_centerHorizontal="true"-->
<!--            android:background="@drawable/white_button"-->
<!--            android:fontFamily="@font/scd7_extra_bold"-->
<!--            android:gravity="center"-->
<!--            android:onClick="@{activity::reservation}"-->
<!--            android:text="@string/reserve"-->
<!--            android:textColor="@color/main_color"-->
<!--            android:textSize="15sp"-->
<!--            android:textStyle="normal" />-->

<!--    </RelativeLayout>-->

<!--</FrameLayout>-->

    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:gravity="center"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:textSize="30sp"-->
    <!--        android:text="@string/hello_blank_fragment_2" />-->